Обновлены зависимости до актуальных. Изменено сообщение об обновлении, чтобы выводилась ошибка либо успешно

--- a/requirements.txt
+++ b/requirements.txt
@@ -17,4 +17,8 @@ pathlib==1.0.1
 python-multipart==0.0.5
 python-dotenv==0.20.0
 loguru==0.6.0
+uvicorn==0.17.6
+sqlalchemy==1.4.36
+passlib==1.7.4
+xlrd==2.0.1
 
