--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,14 @@
-version: '3.1'
+version: '3.7'
 
 services:
   mdgt_dashboard:
     build: ./
     container_name: mdgt_dashboard
     ports:
-      - 8001:8001
+      - 8000:8000
     restart: always
-    links:
-      - mysql:db
     volumes:
-      - /run/user/1000/gvfs/smb-share:server=192.168.0.1,share=files/МДГТ - (Учет рабоч. времени, Отпуск, Даты рожд., телефоны, план работ):./reports
-      - /run/user/1000/gvfs/smb-share:server=192.168.0.1,share=files/МДГТ - (Учет рабоч. времени, Отпуск, Даты рожд., телефоны, план работ)/УЧЕТ рабочего времени:./prize
+      - /home/nick/projects/reports:/files
+
+volumes:
+  files:
