--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,5 +10,12 @@ services:
     volumes:
       - /home/nick/projects/reports:/files
 
+  web:
+    build: ./front/
+    container_name: web
+    ports:
+      - 80:80
+    restart: always
+
 volumes:
   files:
