--- a/service_customers/Dockerfile
+++ b/service_customers/Dockerfile
@@ -10,6 +10,6 @@ RUN pip install --no-cache-dir --upgrade -r /code/requirements.txt
 
 COPY ./app /code/app
 
-COPY ./env /code/app/.env
+COPY ./.env /code/app/.env
 
 CMD ["python", "main.py"]
